# goit-phython

./: README.md  normalize.py
birthday/: birthday.py
clean folder/: clean.py  file_parser.py  normalize.py  setup.py
clean_folder/: setup.py
clean_folder/clean folder/: clean.py
hw_10/: contact_book_classes.py  main.py
hw_11/: contact_book_classes.py  main.py
hw_12/: bot_final.py  classe_for_bot.py
hw_9/: bookbot.py
web/m1/: VisualTable.py  address_book2.py  drawio_Diagram.drawio  fields_for_record.py  print_table.py  record.py  user_funcs.py
web/m10/: pyproject.toml
web/m10/migrate_data_from_mongo_to_postgres/: model_mongo.py
web/m10/quotes/: manage.py
web/m10/quotes/app_quote/: forms.py  models.py  views.py
web/m10/quotes/app_quote/migrations/: 0001_initial.py  0002_author_user_quotes_user_tag_user_tag_tag of username.py  __init__.py
web/m10/quotes/app_quote/templates/: add_tags.html  base.html  index.html  quotes.html
web/m10/quotes/quotes/: settings.py  wsgi.py
web/m10/quotes/users/: forms.py  models.py  urls.py  views.py
web/m10/quotes/users/templates/: login.html  signup.html
web/m11/: alembic.ini  main.py  pyproject.toml
web/m11/src/: schemas.py
web/m11/src/database/: db.py  models.py
web/m11/src/repository/: contacts.py
web/m11/src/routes/: contacts.py
web/m12/: main.py  pyproject.toml
web/m12/migrations/: script.py.mako
web/m12/src/: schemas.py
web/m12/src/database/: models.py
web/m12/src/repository/: contacts.py  users.py
web/m12/src/routes/: auth.py  contacts.py
web/m12/src/services/: auth.py
web/m13/m13/: docker-compose.yml  main.py  pyproject.toml
web/m13Dj/: pyproject.toml
web/m13Dj/migrate_data_from_mongo_to_postgres/: author_seed.py  authors.json  quotes.json
web/m13Dj/quotes/app_quotes/: admin.py  apps.py  forms.py  models.py  urls.py
web/m13Dj/quotes/app_quotes/templates/: add_author.html  author.html  base.html  test.html  upload_quotes.html
web/m13Dj/quotes/quotes/: asgi.py  settings.py  urls.py
web/m13Dj/quotes/static/: style.css
web/m13Dj/quotes/users/: apps.py  forms.py  views.py
web/m13Dj/quotes/users/templates/: login.html  password_reset.html  password_reset_complete.html  password_reset_confirm.html  password_reset_done.html  password_reset_email.html  password_reset_subject.txt  signup.html
web/m14/: main.py  pyproject.toml
web/m14/docs/: Makefile  conf.py  index.rst
web/m14/docs/_build/doctrees/: environment.pickle
web/m14/docs/_build/html/: genindex.html  index.html  objects.inv  py-modindex.html  search.html  searchindex.js
web/m14/docs/_build/html/_static/: basic.css  bizstyle.css  bizstyle.js  doctools.js  language_data.js
web/m14/migrations/versions/: 63b5fed793b6_add_avatar_field.py
web/m14/src/: schemas.py
web/m14/src/conf/: config.py
web/m14/src/database/: db.py  models.py
web/m14/src/routes/: auth.py  contacts.py  users.py
web/m14/src/services/: auth.py  email.py
web/m14/tests/: test_unit_repository_contacts.py  test_unit_repository_users.py
web/m2/: Dockerfile  VisualTable.py  address_book2.py  fields_for_record.py  main.py  pyproject.toml  record.py  requirements.txt  sort.py  user_funcs.py
web/m3/: devider.py  sort_util.py
web/m4/: Dockerfile  error.html  index.html  main.py  message.html  pyproject.toml  requirements.txt  style.css  tetst.html
web/m4/storage/: data.json
web/m5/: Home_task1.py
web/m6/: create_table_at_db.py  db_conection_to_educatio_db.py  education_db  pyproject.toml  query_1.sql  query_10.sql  query_2.sql  query_3.sql  query_4.sql  query_5.sql  query_6.sql  query_7.sql  query_8.sql  query_9.sql  seeds_to_education_db.py
web/m7/: my_select.py  pyproject.toml
web/m7/alembic/: env.py
web/m7/alembic/versions/: aae3bf3d8288_added_student_group.py  b2e8fba9f45f_update_teachers.py  d6a24c5eb3ca_init.py  f67cb1820876_added_teachers.py
web/m7/database/: db.py  models.py
web/m7/seeds/: disciplines.py  grade.py  st_group.py  students.py  teachers.py
web/m8/hw/: authors.json  get_hm.py  models_hm.py  qoutes.json  seed.py
web/m8/hw2/: consumer.py
web/m9/: authors_scraping.py  models_hm.py  scraping_qoutes.py
(+15 files in other folders)
