[tool.poetry]
name = "module12"
version = "0.1.0"
description = ""
authors = ["NickGoit <113237474+NickGoit@users.noreply.github.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.10"
sqlalchemy = "2.0.7"
psycopg2 = "2.9.5"
fastapi = "^0.95.0"
uvicorn = {extras = ["standard"], version = "^0.21.1"}
alembic = "1.10.2"
pydantic = {extras = ["email"], version = "^1.10.7"}
python-jose = {extras = ["cryptography"], version = "^3.3.0"}
passlib = {extras = ["bcrypt"], version = "^1.7.4"}
python-multipart = "^0.0.6"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"