[tool.poetry]
name = "module13-django"
version = "0.1.0"
description = ""
authors = ["georgeulll"]
readme = "README.md"
packages = [{include = "module13_django"}]

[tool.poetry.dependencies]
python = "^3.10"
django = "4.1.7"
psycopg2 = "2.9.5"
pillow = "9.4.0"
sqlalchemy = "2.0.7"
django-environ = "^0.10.0"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"