[tool.poetry]
name = "bot-assist-app"
version = "0.1.0"
description = ""
authors = ["Your Name <you@example.com>"]
readme = "README.md"
packages = [{include = "bot_assist_app"}]

[tool.poetry.dependencies]
python = "^3.10"
termcolor = "^2.2.0"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"