[tool.poetry]
name = "module6-ver2"
version = "0.1.0"
description = ""
authors = ["Your Name <you@example.com>"]
readme = "README.md"
packages = [{include = "module6_ver2"}]

[tool.poetry.dependencies]
python = "^3.10"
faker = "^17.0.0"
psycopg2 = "^2.9.5"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"